--- a/index.html
+++ b/index.html
@@ -1,48 +1,58 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./dist/styles.min.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <title>Lista de Tarefas</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./dist/styles.min.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  <title>Lista de Tarefas</title>
-</head>
+  <body>
+    <div class="container">
+      <div class="row">
+        <div class="intro col-12">
+          <h1>Minhas Tarefas</h1>
+          <div>
+            <div class="border1"></div>
+          </div>
 
-<body>
-  <div class="container">
-    <div class="row">
-      <div class="intro col-12">
-        <h1>Minhas Tarefas</h1>
-        <div>
-          <div class="border1"></div>
-        </div>
+          <div class="row">
+            <div class="col-12">
+              <input
+                id="input"
+                type="text"
+                placeholder="Adicionar nova tarefa... "
+                maxlength="27"
+              />
+              <button id="enter" onclick="enviaTarefa()">+</button>
+            </div>
+          </div>
 
-        <div class="row">
-          <div class="col-12">
-            <input id="input" type="text" placeholder="Adicionar nova tarefa... " maxlength="27">
-            <button id="enter"  onclick=enviaTarefa() > + </button>
+          <!-- Empty List -->
+          <div class="row">
+            <div class="listItems col-12">
+              <ul id="lista" class="col-12 offset-0 col-sm-8 offset-sm-2"></ul>
+            </div>
           </div>
         </div>
-
-        <!-- Empty List -->
-        <div class="row">
-          <div class="listItems col-12">
-            <ul id="lista" class="col-12 offset-0 col-sm-8 offset-sm-2"></ul>
-          </div>
-        </div>
-
       </div>
-
     </div>
-    </div>
-      <script type="text/javascript" src="./dist/script.min.js"></script>
-      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
-
-</body>
-
+    <script type="text/javascript" src="./src/js/index.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+      integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
