feat: add localstorage, add search by name, verify duplicated task

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
   <div class="container">
     <div class="row">
           <div class="col-8">
-            <input id="inputName" type="text" placeholder="Adicionar nova tarefa...">
+            <input id="inputName" placeholder="Adicionar nova tarefa...">
             <button id="addTaskBtn" class="btn">+</button>
           </div>
           <div class="col-4">
-            <input id="inputId" type="number" placeholder="ID da Tarefa..." min="1" />
-            <button onclick="getTaskById()" class="btn">Buscar</button>
+            <input id="inputId" placeholder="ID ou nome da Tarefa..." min="1" />
+            <button onclick="getTaskByIdOrName()" class="btn">Buscar</button>
           </div>
 
 
